# src/main/java/com/gw/job/sample/controller/PostedCompanyController.java
@@ -2,6 +2,8 @@ package com.gw.job.sample.controller;
 
 import com.gw.job.sample.config.OpenApiConstant;
 import com.gw.job.sample.entity.request.PostedUpdateRequest;
+import com.gw.job.sample.entity.response.PostedResponse;
+import com.gw.job.sample.entity.response.ResumeResponse;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
@@ -11,9 +13,11 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
@@ -34,6 +38,21 @@ import org.springframework.web.bind.annotation.RestController;
 public class PostedCompanyController {
 
     public static final String BASE_PATH = "/posted-company/v1/";
+
+    @GetMapping("/users/{userId}/companies/{cid}")
+    @ResponseStatus(HttpStatus.OK)
+    @Operation(summary = "企業へ応募しているか返す")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "企業へ応募済みのユーザーか返す",
+                    content = @Content(schema = @Schema(implementation = PostedResponse.class),
+                            mediaType = MediaType.APPLICATION_JSON_VALUE
+                    )),
+            @ApiResponse(responseCode = "400", ref = OpenApiConstant.BAD_REQUEST),
+            @ApiResponse(responseCode = "500", ref = OpenApiConstant.INTERNAL_SERVER_ERROR),
+    })
+    public ResponseEntity<?> isPostedUser(@PathVariable("userId") long userId, @PathVariable("cid") long cid) {
+        return ResponseEntity.ok().build();
+    }
 
     @PostMapping("/users/{userId}/companies/{cid}")
     @ResponseStatus(HttpStatus.NO_CONTENT)
